--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "nodemon": "^3.1.7",
     "pg": "^8.13.0",
     "typescript": "^5.6.3"
+  },
+  "devDependencies": {
+    "prisma": "^5.20.0"
   }
 }
