--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.20.0",
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.13",
+    "@types/node": "^22.7.5",
     "@types/nodemon": "^1.19.6",
+    "dotenv": "^16.4.5",
     "express-async-errors": "^3.1.1",
     "jest": "^29.7.0",
     "nodemon": "^3.1.7",
     "pg": "^8.13.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   },
   "devDependencies": {
