--- a/package.json
+++ b/package.json
@@ -1,25 +1,39 @@
 {
-  "name": "emergencycontrolapi",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Dawid Zgierski",
-  "license": "ISC",
-  "dependencies": {
-    "@prisma/client": "^5.20.0",
-    "@types/express": "^5.0.0",
-    "@types/jest": "^29.5.13",
-    "@types/nodemon": "^1.19.6",
-    "express-async-errors": "^3.1.1",
-    "jest": "^29.7.0",
-    "nodemon": "^3.1.7",
-    "pg": "^8.13.0",
-    "typescript": "^5.6.3"
-  },
-  "devDependencies": {
-    "prisma": "^5.20.0"
-  }
+	"name": "projekt-konkurs",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc -b && vite build",
+		"lint": "eslint .",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"@types/leaflet": "^1.9.12",
+		"leaflet": "^1.9.4",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"react-leaflet": "^4.2.1",
+		"react-router-dom": "^6.26.2"
+	},
+	"devDependencies": {
+		"@eslint/js": "^9.11.1",
+		"@types/dotenv": "^8.2.0",
+		"@types/node": "^22.5.5",
+		"@types/react": "^18.3.10",
+		"@types/react-dom": "^18.3.0",
+		"@types/react-router-dom": "^5.3.3",
+		"@vitejs/plugin-react": "^4.3.2",
+		"autoprefixer": "^10.4.20",
+		"eslint": "^9.11.1",
+		"eslint-plugin-react-hooks": "^5.1.0-rc.0",
+		"eslint-plugin-react-refresh": "^0.4.12",
+		"globals": "^15.9.0",
+		"postcss": "^8.4.47",
+		"tailwindcss": "^3.4.13",
+		"typescript": "^5.5.3",
+		"typescript-eslint": "^8.7.0",
+		"vite": "^5.4.8"
+	}
 }
