--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "nodemon": "^3.1.7",
     "pg": "^8.13.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "vercel": "^37.9.0"
   },
   "devDependencies": {
     "prisma": "^5.20.0"
