--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/index.ts"
+    "build": "nodemon src/index.ts"
   },
   "author": "Dawid Zgierski",
   "license": "ISC",
