--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "emergencycontrolapi",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "nodemon src/index.ts"
+
+    "start": "ts-node src/index.ts",
+    "dev": "nodemon src/index.ts",
+    "build": "tsc",
+    "test": "jest"
   },
   "author": "Dawid Zgierski",
   "license": "ISC",
