--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"@types/leaflet": "^1.9.12",
 		"leaflet": "^1.9.4",
+		"lucide-react": "^0.453.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-leaflet": "^4.2.1",
