--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "src/index.ts",
   "scripts": {
 
-    "start": "ts-node src/index.ts",
-    "dev": "nodemon src/index.ts",
+    "start": "ts-node src/main.ts",
+    "dev": "nodemon src/main.ts",
     "test": "jest",
     "vercel-build": "echo hello"
   },
