--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,16 @@
-{"version": 2, "builds": [{"src": "./main.ts", "use": "@vercel/node"}], "routes": [{"src": "/(.*)", "dest": "/"}]}
+{
+    "version": 2,
+    "builds": [
+        {
+            "src": "dist/main.js",
+            "use": "@vercel/node",
+            "config": { "includeFiles": ["dist/**"] }
+        }
+    ],
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "dist/index.js"
+        }
+    ]
+}
