update package.json for vercel deployment

--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "emergencycontrolapi",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.ts",
+  "main": "src/main.ts",
+  "pre-commit": [
+    "ts.check",
+    "build",
+    "add-build"
+],
   "scripts": {
-
-    "start": "ts-node src/main.ts",
-    "dev": "nodemon src/main.ts",
-    "test": "jest",
-    "vercel-build": "echo hello"
+    "start": "nodemon src/main.ts",
+    "build": "rimraf dist && tsc",
+    "ts.check": "tsc --project tsconfig.json",
+    "add-build": "git add dist"
   },
   "author": "Dawid Zgierski",
   "license": "ISC",
