--- a/package.json
+++ b/package.json
@@ -2,15 +2,10 @@
   "name": "emergencycontrolapi",
   "version": "1.0.0",
   "description": "",
-  "main": "src/main.ts",
-  "pre-commit": [
-    "ts.check",
-    "build",
-    "add-build"
-],
   "scripts": {
-    "start": "ts-node src/index.ts",
-    "watch": "nodemon src/main.ts"
+    "start": "ts-node src/main.ts",
+    "dev": "nodemon src/main.ts",
+    "postinstall": "prisma generate"
   },
   "author": "Dawid Zgierski",
   "license": "ISC",
