--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,3 @@
 {
-    "version": 2,
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "src/main.ts"
-      }
-    ]
+"rewrites": [{"source": "/(.*)", "destination": "/api"}]
   }
