--- a/package.json
+++ b/package.json
@@ -16,16 +16,20 @@
     "@types/jest": "^29.5.13",
     "@types/node": "^22.7.5",
     "@types/nodemon": "^1.19.6",
+    "@types/swagger-jsdoc": "^6.0.4",
     "dotenv": "^16.4.5",
     "express-async-errors": "^3.1.1",
     "jest": "^29.7.0",
     "nodemon": "^3.1.7",
     "pg": "^8.13.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3",
     "vercel": "^37.9.0"
   },
   "devDependencies": {
+    "@types/swagger-ui-express": "^4.1.6",
     "prisma": "^5.20.0"
   }
 }
